Dev/templates/network.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "resourcePrefix": {
            "type": "string"
        },
        "dnsNamePrefix": {
            "type": "string"
        },
        "nicName": {
            "type": "string"
        }
    },
    "variables": {
        "apiVersion": "2015-06-15",
        "addressPrefix": "10.0.0.0/16",
        "subnetName": "[concat(parameters('resourcePrefix'), 'subnet')]",
        "subnetPrefix": "10.0.0.0/24",
        "publicIPAddressName": "[concat(parameters('resourcePrefix'), 'pip')]",
        "publicIPAddressType": "Dynamic",
        "virtualNetworkName": "[concat(parameters('resourcePrefix'), 'vnet')]",
        "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName'))]",
        "subnetRef": "[concat(variables('vnetID'),'/subnets/',variables('subnetName'))]",
        "nsgName": "[concat(parameters('resourcePrefix'), 'nsg')]"
    },
    "resources": [{
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('publicIPAddressName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "publicIPAllocationMethod": "[variables('publicIPAddressType')]",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('dnsNamePrefix')]"
                }
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('virtualNetworkName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets": [{
                    "name": "[variables('subnetName')]",
                    "properties": {
                        "addressPrefix": "[variables('subnetPrefix')]",
                        "networkSecurityGroup": {
                            "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
                        }
                    }
                }]
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('nicName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
                "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
            ],
            "properties": {
                "ipConfigurations": [{
                    "name": "[concat(parameters('nicName'), 'ipconfig')]",
                    "properties": {
                        "privateIPAllocationMethod": "Dynamic",
                        "publicIPAddress": {
                            "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
                        },
                        "subnet": {
                            "id": "[variables('subnetRef')]"
                        }
                    }
                }]
            }
        },
        {
            "apiVersion": "[variables('ApiVersion')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('nsgName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [{
                        "name": "allow-http",
                        "properties": {
                            "description": "Allow HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "INTERNET",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-https",
                        "properties": {
                            "description": "Allow HTTPS",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "INTERNET",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-justin",
                        "properties": {
                            "description": "Allow Justin",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "71.231.12.245",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-jan",
                        "properties": {
                            "description": "Allow Jan",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "77.26.194.94",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 201,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-nacho",
                        "properties": {
                            "description": "Allow Nacho",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "95.123.23.182",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 202,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-ruben",
                        "properties": {
                            "description": "Allow Ruben",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "90.162.51.107",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 203,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-jason",
                        "properties": {
                            "description": "Allow Jason",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "67.160.43.53",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 204,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "deny-inbound",
                        "properties": {
                            "description": "Deny Inbound",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "INTERNET",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 300,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        }
    ]
}
